day31/chip-lab/01_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chip
  labels:
    istio-injection: enabled
