day31/chip-lab/05_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: chip
  name: chip
  namespace: chip
spec:
  replicas: 3
  selector:
    matchLabels:
      app: chip
  template:
    metadata:       
      labels:
        app: chip
        name: chip
        version: v1
    spec:
      nodeSelector:
        karpenter.sh/nodepool: chip-capacity

      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: "topology.kubernetes.io/zone"
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: chip
            
        - maxSkew: 1
          topologyKey: "node.kubernetes.io/instance-type"
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: chip

        - maxSkew: 1
          topologyKey: "karpenter.sh/capacity-type"
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: chip


      containers:
        - name: chip
          image: fidelissauro/chip:v1
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 250m
              memory: 512Mi            
          startupProbe:
            failureThreshold: 10
            httpGet:
              path: /readiness
              port: 8080
            periodSeconds: 10
          livenessProbe:
            failureThreshold: 10
            httpGet:
              httpHeaders:
                - name: Custom-Header
                  value: Awesome
              path: /liveness
              port: 8080
            periodSeconds: 10
      terminationGracePeriodSeconds: 60
