day31/chip-lab/04_istio_destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: chip
  namespace: chip
spec:
  host: chip.chip.svc.cluster.local
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 2
      http:
        http1MaxPendingRequests: 10
        maxRequestsPerConnection: 10
    outlierDetection:
      consecutive5xxErrors: 100
      interval: 300ms
      baseEjectionTime: 60s
      maxEjectionPercent: 50
